# learnbase

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_quick_parse.py
docker/: Dockerfile  notify-daemon.py
google-calendar/: setup_auth.py
hooks/: post-push  pre-commit
scripts/: bump-version.sh  capture_drill.py  cleanup_to_learn.py  install-hooks.sh  migrate_context_to_sqlite.py  migrate_tasks_to_sqlite.py  migrate_to_learn.py  notify-host-listener.py  notify-start.sh  notify-stop.sh  parse_commits.py  setup.sh  test_to_learn.py  zsh_drill_widget.zsh
scripts/hooks/: post-push
skills/: README.md
skills/quiz/: SKILL.md
skills/verify/: SKILL.md
src/learnbase/: __init__.py  __version__.py  mcp_server.py
src/learnbase/core/: __init__.py  calendar_manager.py  context_manager.py  context_parser.py  daily_manager.py  database.py  llm_generator.py  models.py  note_manager.py  parsers.py  planning_manager.py  rag_manager.py  spaced_rep.py  tasks_manager.py  to_learn_manager.py
src/learnbase/gui/: __main__.py  app.py  dialogs.py  theme.py
src/learnbase/tools/: __init__.py  calendar.py  context.py  daily.py  drills.py  notes.py  performance.py  planning.py  rag.py  (+4 more)
tests/: test_context_manager.py  test_drill_models.py  test_drill_tools.py  test_information_validation.py  test_ladder_sr.py  test_mcp_note_types.py  test_note_types.py  test_planning_manager.py  test_priority_logic.py  test_priority_requests.py
tui/: .gitignore  go.mod  go.sum
tui/helper/: learnbase_drill.py  learnbase_search.py
(+27 files in other folders)
